# speclet

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  COMMANDS.md  Environment.cmake  JuceAudioPluginHost.filtergraph  JuceAudioPluginHostRelWithDebInfo.filtergraph  JuceAudioPluginHostRelease.filtergraph  README.md  TROUBLESHOOTING.md  USERGUIDE.md  fftw-update-min-cmake.patch  package-lock.cmake  renovate.json  speclet.code-workspace
.github/prompts/: plan-relieveAudioThread.prompt.md
.github/workflows/: continuous-integration.yml
cmake/: CompilerOptions.cmake  Environment.cmake
doc/architecture/: ARCHITECTURE.md  architecture.gv
lib/ranlib/: ranlib.cpp
lib/wave++/: CMakeLists.txt  README.txt
lib/wave++/demos/: Makefile  README.txt  demoMP.cc  demoTools.cc  demoTools.h  demoWav.cc  demoWavPack.cc  input_maker.cc  input_maker.h  rms_error.cc  rms_error.h
lib/wave++/demos/ranlib/: com.c  makefile  ranlib.c
lib/wave++/documentation/: README.txt
lib/wave++/documentation/ps/: CppWavelets.ps  demoDenoising.ps  mpTechReport.ps  wave++.ps
lib/wave++/includes/: ArrayTree.h  BinTree.h  ConvDec.h  FFTGaborMP.h  Gabor.h  Hedge.h  InOutUtil.h  Interval.h  Partition.h  QMF.h  ShiftGaborMP.h  Utility.h  WavePacket.h  WaveTrans.h  common.h  fft.h  libw.h  oqfs.h
lib/wave++/source/: ArrayTree.cc  ArrayTree.h  BinTree.h  ConvDec.cc  ConvDec.h  FFTGaborMP.cc  FFTGaborMP.h  Gabor.cc  Gabor.h  Hedge.cc  Hedge.h  InOutUtil.cc  InOutUtil.h  Interval.cc  Interval.h  Makefile  Partition.cc  Partition.h  QMF.cc  QMF.h  README.txt  ShiftGaborMP.cc  ShiftGaborMP.h  Utility.cc  Utility.h  WavePacket.cc  WavePacket.h  WaveTrans.cc  WaveTrans.h  common.cc  common.h  fft.c  fft.h  libw.h  oqfs.h
lib/wave++/sources/: ArrayTree.cpp  ConvDec.cpp  FFTGaborMP.cpp  Gabor.cpp  Hedge.cpp  InOutUtil.cpp  Interval.cpp  Partition.cpp  QMF.cpp  ShiftGaborMP.cpp  Utility.cpp  WavePacket.cpp  WaveTrans.cpp  common.cpp  fft.cpp
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpecletPluginProcessor.cpp  SpecletPluginProcessor.h
src/config/: AppConfig.h  JucePluginCharacteristics.h
src/data/: SpectralDataBuffer.cpp  SpectralDataBuffer.h  SpectralDataInfo.cpp  SpectralDataInfo.h
src/dsp/: DspThread.cpp  DspThread.h  SignalGenerator.cpp  SignalGenerator.h  SignalGeneratorParameters.h  WindowFunctions.cpp  WindowFunctions.h
src/dsp/transformations/: AbstractWaveletTransformation.cpp  AbstractWaveletTransformation.h  FourierTransformation.cpp  FourierTransformation.h  Transformation.cpp  Transformation.h  TransformationFactory.cpp  TransformationFactory.h  TransformationParameters.h  WaveletPacketBestBasisTransformation.cpp  WaveletPacketBestBasisTransformation.h  WaveletPacketTransformation.cpp  WaveletPacketTransformation.h  WaveletParameters.h  WaveletTransformation.cpp  WaveletTransformation.h
src/dsp/windowing/: WindowFunction.cpp  WindowFunction.h  WindowFunctionFactory.cpp  WindowFunctionFactory.h  WindowFunctions.cpp  WindowFunctions.h  WindowParameters.h
src/parameter/: SpecletParameters.cpp  SpecletParameters.h
src/plugin/: SpecletParameters.cpp  SpecletParameters.h  SpectronAudioProcessor.cpp  SpectronAudioProcessor.h  SpectronParameters.cpp  SpectronParameters.h
src/standalone/: Main.cpp
src/ui/: ColorGradientsParameters.h  ColourGradients.cpp  ColourGradients.h  SpecletAnalyzerComponent.cpp  SpecletAnalyzerComponent.h  SpecletDrawer.cpp  SpecletDrawer.h  SpecletDrawerParameters.h  SpecletMainUI.cpp  SpecletMainUI.h  SpectronAnalyzerComponent.cpp  SpectronAnalyzerComponent.h  SpectronDrawer.cpp  SpectronDrawer.h  SpectronMainUI.cpp  SpectronMainUI.h
src/user interface/: ColourGradients.h  SpectronAnalyzerComponent.cpp  SpectronAnalyzerComponent.h  SpectronDrawer.cpp  SpectronDrawer.h  SpectronMainUI.cpp  SpectronMainUI.h
src/utilities/: PerformanceLogger.h  PerformanceManager.cpp  PerformanceManager.h  PerformanceTimer.h  RenderingHelper.cpp  RenderingHelper.h
test/: CMakeLists.txt  CommonTestUtils.cpp  CommonTestUtils.h  DspThreadTest.cpp  Main.cpp  Main.cpp.backup  PluginBasicsTest.cpp  RenderingHelperTest.cpp  SpecletTestViolationExceptionLog.txt  SpectralDataBufferTest.cpp  TestCases.h  Test_DWPT_1.cpp  Test_DWPT_BestBasis.cpp  Test_FourierPerformance.cpp  Test_FourierTransformation.cpp  Test_RenderingHelper.cpp  Test_WaveletTransformation.cpp  Test_WindowFunctionsFactory.cpp  TransformationIntegrationTest.cpp  WaveletTransformationTest.cpp  WindowFunctionFactoryTest.cpp
